Painting list style mostly finished

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="results">
       <h3>Overview</h3>
       <h3>Palette Preview</h3>
-      <h3>Add to Compare</h3>
+      <h3>Compare</h3>
 
       <ul id="paintingList"></ul>
       </div>
@@ -38,7 +38,6 @@
   <div class="comparepaintings">
     <div class="list">
       <!-- TODO: possibly change class name even though results and compare paintings lists are somewhat similar -->
-      <p>Nothing to Compare</p>
     </div>
     <!-- compare button -->
   </div>
