Removed duplicates from search

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </div>
 
   <div class="searchresults">
-    <h2 class="resultstitle">Search Results</h2>
+    <h2 class="resultstitle" id="searchString">Search Results</h2>
     <div class="results">
       <h3>Overview</h3>
       <h3>Palette Preview</h3>
