--- a/compare.html
+++ b/compare.html
@@ -9,11 +9,14 @@
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-  
-  <title>Painting Palette Breakdown</title>
+
+  <!-- D3.js -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
+
+  <title>Painting Comparison</title>
 </head>
 <body>
-  
+
   <h1>Painting Palette Breakdown</h1>
 
   <div class="navbar">
@@ -29,26 +32,32 @@
       <a href="/"><img class="help-icon" src="/imgs/help.png" alt="help button"></a>
   </div>
 
-  <div class="searchresults">
-    <h2 class="resultstitle" id="searchString">Search Results</h2>
-    <div class="results">
-      <h3>Overview</h3>
-      <h3>Palette Preview</h3>
-      <h3>Compare</h3>
+  <div class="radarchart">
+    <h2>Radar Chart Comparison</h2>
+    <h3>Selected Painting Title</h3>
+    <h4>Artist Name</h4>
+    
+    <div class="radarChart"></div>
 
-      <ul id="paintingList"></ul>
-      </div>
+  </div>
+
+  <div class="paintingsidebar">
+    <!-- enlarged version of selected painting -->
+    <div class="list">
+      <!-- list items here -->
     </div>
   </div>
 
   <div class="compareresults">
     <h2 class="resultstitle">Compare Paintings</h2>
     <div class="compare">
+      <!-- TODO: possibly change class name even though results and compare paintings lists are somewhat similar -->
       <ul id="compareList"></ul>
     </div>
     <a href="/compare.html"><button class="comparebutton">Compare</button></a>
   </div>
 
-  <script src="/js/main.js"></script>
+  <script src="/js/radar.js"></script>
+
 </body>
 </html>
