Working on layout of compare page

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-  
+
   <title>Painting Palette Breakdown</title>
 </head>
 <body>
@@ -26,7 +26,7 @@
           placeholder="Search for anything"
       />
       <a href="/index.html"><button id="searchbutton" class="comparebutton">Search</button></a>
-      <a href="/"><img class="help-icon" src="/imgs/help.png" alt="help button"></a>
+      <a href="/"><img class="help-icon" src="imgs/help.png" alt="help button"></a>
   </div>
 
   <div class="searchresults">
