--- a/compare.html
+++ b/compare.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -42,14 +42,11 @@
   </div>
 
   <div class="paintingsidebar">
-    <!-- enlarged version of selected painting -->
-    <div class="list">
-      <!-- list items here -->
-    </div>
+    <div class="list" id="condensed"></div>
   </div>
 
   <div class="compareresults">
-    <h2 class="resultstitle">Compare Paintings</h2>
+    <h3 class="resultstitle">Compare Paintings</h3>
     <div class="compare">
       <!-- TODO: possibly change class name even though results and compare paintings lists are somewhat similar -->
       <ul id="compareList"></ul>
