--- a/web/radar.html
+++ b/web/radar.html
@@ -3,7 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="/css/styles.css">
+
+  <!-- CSS -->
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
+  <!-- D3.js -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
+
   <title>Painting Comparison</title>
 </head>
 <body>
@@ -11,37 +20,41 @@
   <h1>Painting Palette Breakdown</h1>
 
   <div class="navbar">
-    <img src="/imgs/" alt="website logo">
-    <div class="searchbar">
-      <!-- search bar box -->
-      <!-- search bar button -->
-      <!-- search bar help tooltip/button -->
-    </div>
+    <!-- <img class="logo" src="/imgs/logo.png" alt="website logo"> -->
+      <a class="navlink" href="/index.html"><img class="home-icon" src="imgs/home.png"></a>
+      <input 
+          type="text"
+          name="searchBar" 
+          id="searchBar"
+          placeholder="Search for anything"
+      />
+      <a href="/index.html"><button id="searchbutton" class="comparebutton">Search</button></a>
+      <a href="/"><img class="help-icon" src="/imgs/help.png" alt="help button"></a>
   </div>
 
   <div class="radarchart">
     <h2>Radar Chart Comparison</h2>
     <h3>Selected Painting Title</h3>
     <h4>Artist Name</h4>
-    <!-- insert radar chart here -->
+    
+    <div class="radarChart"></div>
+
   </div>
 
   <div class="paintingsidebar">
-    <!-- enlarged version of selected painting -->
-    <div class="list">
-      <!-- list items here -->
-    </div>
+    <div class="list" id="condensed"></div>
   </div>
 
-  <div class="comparepaintings">
-    <div class="list">
+  <div class="compareresults">
+    <h3 class="resultstitle">Compare Paintings</h3>
+    <div class="compare">
       <!-- TODO: possibly change class name even though results and compare paintings lists are somewhat similar -->
-      <!-- TODO: shrink width of comparison sidebar on this page -->
-      <p>Nothing to Compare</p>
+      <ul id="compareList"></ul>
     </div>
-    <!-- compare button -->
+    <a href="/compare.html"><button class="comparebutton">Compare</button></a>
   </div>
 
   <script src="/js/radar.js"></script>
+
 </body>
 </html>
