--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="/web/css/styles.css">
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -18,15 +18,15 @@
 
   <div class="navbar">
     <!-- <img class="logo" src="/imgs/logo.png" alt="website logo"> -->
-      <a class="navlink" href="/index.html"><img class="home-icon" src="imgs/home.png"></a>
+      <a class="navlink" href="/web/index.html"><img class="home-icon" src="/imgs/home.png"></a>
       <input 
           type="text"
           name="searchBar" 
           id="searchBar"
           placeholder="Search for anything"
       />
-      <a href="/index.html"><button id="searchbutton" class="comparebutton">Search</button></a>
-      <a href="/"><img class="help-icon" src="imgs/help.png" alt="help button"></a>
+      <a href="/web/index.html"><button id="searchbutton" class="comparebutton">Search</button></a>
+      <a href="/web/index.html"><img class="help-icon" src="/imgs/help.png" alt="help button"></a>
   </div>
 
   <div class="searchresults">
@@ -46,9 +46,9 @@
     <div class="compare">
       <ul id="compareList"></ul>
     </div>
-    <a href="/compare.html"><button class="comparebutton">Compare</button></a>
+    <a href="/web/compare.html"><button class="comparebutton">Compare</button></a>
   </div>
 
-  <script src="/js/main.js"></script>
+  <script src="/web/js/main.js"></script>
 </body>
 </html>
