Radar chart comparison page layout

--- a/web/compare.html
+++ b/web/compare.html
@@ -34,15 +34,17 @@
 
   <div class="radarchart">
     <h2>Radar Chart Comparison</h2>
-    <h3>Selected Painting Title</h3>
-    <h4>Artist Name</h4>
+    <h3 style="line-height: 5px;">Selected Painting Title</h3>
+    <h4 style="line-height: 0px;">Artist Name</h4>
     
     <div class="radarChart"></div>
 
   </div>
 
   <div class="paintingsidebar">
-    <div class="list" id="condensed"></div>
+    <div class="list">
+      <h3 class="resultstitle">Selected Paintings</h3>
+    </div>
   </div>
 
   <div class="compareresults">
