Data passing from search to compare page working, doesn't work the other way though

--- a/web/compare.html
+++ b/web/compare.html
@@ -34,8 +34,8 @@
 
   <div class="radarchart">
     <h2>Radar Chart Comparison</h2>
-    <h3 style="line-height: 5px;">Selected Painting Title</h3>
-    <h4 style="line-height: 0px;">Artist Name</h4>
+    <h3 id="paintingTitle" style="line-height: 5px;">Selected Painting Title</h3>
+    <h4 id="paintingArtist" style="line-height: 0px;">Artist Name</h4>
     
     <div class="radarChart"></div>
 
