Tweaking compare page layout

--- a/web/compare.html
+++ b/web/compare.html
@@ -42,19 +42,20 @@
   </div>
 
   <div class="paintingsidebar">
-    <div class="list">
+    <div id="selectedPaintingImage"></div>
+    <div class="selectedlist">
       <h3 class="resultstitle">Selected Paintings</h3>
+      <ul id="selectedList"></ul>
     </div>
   </div>
 
-  <div class="compareresults">
+  <!-- <div class="compareresults">
     <h3 class="resultstitle">Compare Paintings</h3>
     <div class="compare">
-      <!-- TODO: possibly change class name even though results and compare paintings lists are somewhat similar -->
       <ul id="compareList"></ul>
     </div>
     <a href="/web/compare.html"><button class="comparebutton">Compare</button></a>
-  </div>
+  </div> -->
 
   <script src="/web/js/radar.js"></script>
 
