--- a/web/index.html
+++ b/web/index.html
@@ -43,7 +43,9 @@
 
   <div class="compareresults">
     <h3 class="resultstitle">Compare Paintings</h3>
+    <div class="scrollcover">
       <ul id="compareList"></ul>
+    </div>
     </div>
     <a href="/web/compare.html"><button class="comparebutton">Compare</button></a>
   </div>
