Added local q images / pagination

--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,12 @@
   </div>
 
   <div class="searchresults">
-    <h2 class="resultstitle" id="searchString">Search Results</h2>
+    <div>
+      <h2 class="resultstitle" id="searchString">Search Results</h2>
+      <div>
+        <div id="pageLinks" />
+      </div>
+    </div>
     <div class="results">
       <h3>Overview</h3>
       <h3>Palette Preview</h3>
