Minor formatting changes / added onload

--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,8 @@
 
   <div class="searchresults">
     <div>
-      <h2 class="resultstitle" id="searchString">Search Results</h2>
+      <!-- <h2 class="resultstitle" id="searchString">Search Results</h2> -->
+      <br />
       <div>
         <div id="pageLinks" />
       </div>
