--- a/web/index.html
+++ b/web/index.html
@@ -30,13 +30,8 @@
   </div>
 
   <div class="searchresults">
-    <div>
-      <!-- <h2 class="resultstitle" id="searchString">Search Results</h2> -->
-      <br />
-      <div>
-        <div id="pageLinks" />
-      </div>
-    </div>
+      <h2 class="resultstitle">Search Results</h2>
+      <div id="pageLinks"></div>
     <div class="results">
       <h3>Overview</h3>
       <h3>Palette Preview</h3>
@@ -44,7 +39,6 @@
 
       <ul id="paintingList"></ul>
       </div>
-    </div>
   </div>
 
   <div class="compareresults">
