Some UI updates

--- a/web/index.html
+++ b/web/index.html
@@ -9,12 +9,21 @@
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;600&display=swap" rel="stylesheet"> 
+
+  <link href="https://fonts.googleapis.com/css2?family=Martel&display=swap" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,600;1,400&display=swap" rel="stylesheet">
+
+
+
+
 
   <title>Painting Palette Breakdown</title>
 </head>
 <body>
   
-  <h1>Painting Palette Breakdown</h1>
+  <h1 class="mainLogoText">Painting Palette Breakdown</h1>
 
   <div class="navbar">
     <!-- <img class="logo" src="/imgs/logo.png" alt="website logo"> -->
@@ -46,7 +55,7 @@
     <div class="results">
       <h3>Overview</h3>
       <h3>Palette Preview</h3>
-      <h3>Compare</h3>
+      <h3>Compare?</h3>
 
       <ul id="paintingList"></ul>
       </div>
