--- a/web/index.html
+++ b/web/index.html
@@ -11,13 +11,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;600&display=swap" rel="stylesheet"> 
 
-  <link href="https://fonts.googleapis.com/css2?family=Martel&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Martel+Sans:wght@400;700&family=Martel:wght@400;700&display=swap" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,600;1,400&display=swap" rel="stylesheet">
-
-
-
-
 
   <title>Painting Palette Breakdown</title>
 </head>
@@ -50,7 +46,6 @@
   </div>
 
   <div class="searchresults">
-      <h2 class="resultstitle">Search Results</h2>
       <div id="pageLinks"></div>
     <div class="results">
       <h3>Overview</h3>
@@ -66,10 +61,9 @@
     <div class="scrollcover">
       <ul id="compareList"></ul>
     </div>
+      <a href="/web/compare.html"><button class="comparebutton">Compare</button></a>
     </div>
-    <a href="/web/compare.html"><button class="comparebutton">Compare</button></a>
-  </div>
-
+    
   <script src="/web/js/main.js"></script>
 </body>
 </html>
