--- a/web/compare.html
+++ b/web/compare.html
@@ -9,15 +9,21 @@
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;600&display=swap" rel="stylesheet"> 
+
+  <link href="https://fonts.googleapis.com/css2?family=Martel+Sans:wght@400;700&family=Martel:wght@400;700&display=swap" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,600;1,400&display=swap" rel="stylesheet">
 
   <!-- D3.js -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
+
 
   <title>Painting Comparison</title>
 </head>
 <body>
 
-  <h1>Painting Palette Breakdown</h1>
+  <h1 class="mainLogoText">Painting Palette Breakdown</h1>
 
   <div class="navbar">
     <!-- <img class="logo" src="/imgs/logo.png" alt="website logo"> -->
